# object_detecion

./: .gitignore  CMakeLists.txt  README.md  package.xml
configs/classnames/: classnames.yaml
extra/: class_timer.hpp
launch/: detection.launch
samples/: sample_detector.cpp
src/: object_detection.cpp
